--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,37 +1,26 @@
 cmake_minimum_required(VERSION 3.13)
 
-# initialize pico-sdk from GIT
-# (note this can come from environment, CMake cache etc)
-#set(PICO_SDK_FETCH_FROM_GIT on)
+# uncomment the following line if building for different pico board
+set(PICO_BOARD pico2_w CACHE STRING "Board type")
 
-# pico_sdk_import.cmake is a single file copied from this SDK
-# note: this must happen before project()
-set(PICO_SDK_ROOT $ENV{HOME}/pico-sdk)
-include(${PICO_SDK_ROOT}/external/pico_sdk_import.cmake)
+include(settings.cmake)
+include(pico_sdk_import.cmake)
 
-project(RP2040_ILI9341_XPT2046)
-set(EXE rp2040_ili9341_xpt2046)
 
-# initialize the Raspberry Pi Pico SDK
+project(${lib_name} C CXX ASM)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+
 pico_sdk_init()
 
-add_executable(${EXE}
-    main.c
-    ili9341.c
-    ili9341.h
-    #ili9341_framebuffer.c
-    #ili9341_framebuffer.h
-    ili9341_draw.c
-    ili9341_draw.h
-    xpt2046.c
-    xpt2046.h
-    ugui.c
-    ugui.h
+add_subdirectory(src)
+target_include_directories(${lib_name}
+        PUBLIC src
 )
-
-# Add pico_stdlib library which aggregates commonly used features
-target_link_libraries(${EXE} pico_stdlib hardware_spi)
-
-# create map/bin/hex/uf2 file in addition to ELF.
-pico_add_extra_outputs(${EXE})
-
+add_subdirectory(example)
+target_link_libraries(${lib_name}
+        pico_stdlib
+)
+target_link_libraries(${example_name}
+        pico_stdlib
+)
